Bug 1013744 - Send alternative char codes for keypress events to the child (for shortcuts etc.). r=masayuki